Update and rename 备忘.txt to 备忘.md

--- a/备忘.md
+++ b/备忘.md
@@ -1,7 +1,8 @@
 
 个人电脑软件易用性：
 
-好软件
+个人电脑软件易用性好的软件：
+(用户友好软件)
 The Unarchiver
 Keka
 XnViewMP
@@ -15,7 +16,8 @@ CleanMyMac
 
 
 
-垃圾软件
+个人电脑软件易用性不好的软件：
+(用户不友好软件)
 brew
 XMenu
 ST
