--- a/small/系统划分-虚拟机办公.md
+++ b/small/系统划分-虚拟机办公.md
@@ -1,5 +1,15 @@
 
 系统划分之后，在“民用系统”之上，可以弄其他的
 
-不如直接就[虚拟机办公](http://www.cnblogs.com/krazysky/p/3671979.html)
+不玩电脑，不折腾 “民用系统”
+
+- 不如直接就[虚拟机办公](http://www.cnblogs.com/krazysky/p/3671979.html)
+
+(穷玩车 富玩表 傻逼玩电脑 吊死拿手机当个宝。一问三不知这都)
+
+最大程度的 避免问题
+
+[王垠：完全用Linux工作](https://www.douban.com/group/topic/12121637/)
+
+[用 CentOS 7 打造合适的科研环境](http://seisman.info/linux-environment-for-seismology-research.html)
 
