--- a/small/系统划分-虚拟机办公.md
+++ b/small/系统划分-虚拟机办公.md
@@ -1,7 +1,7 @@
 
 系统划分之后，在“民用系统”之上，可以弄其他的
 
-不玩电脑，不折腾 “民用系统”
+不玩电脑，不折腾 “民用系统”。不看视频不玩网络，就是不玩它
 
 - 不如直接就[虚拟机办公](http://www.cnblogs.com/krazysky/p/3671979.html)
 
@@ -13,3 +13,4 @@
 
 [用 CentOS 7 打造合适的科研环境](http://seisman.info/linux-environment-for-seismology-research.html)
 
+[web archive](https://web.archive.org/)
