--- a/small/系统划分-虚拟机办公.md
+++ b/small/系统划分-虚拟机办公.md
@@ -1,6 +1,6 @@
 
 <sub>
-甭管未来发生什么，都在我的掌控之内 ———— 我 掌控 虚拟机 (隔离开我的主机，虚拟机之间也互不干扰)
+甭管未来发生什么，都在我的掌控之内 ———— 我 掌控 虚拟机 (隔离开我的主机，虚拟机之间也互不干扰)。简单 粗暴 可控 (零件化)
 </sub>
 
 <br><br><br>
